# omniget

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  PORTING-HANDOVER.md  README.md  README.ru.md  README_zh_CN.md  claude.md  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js
.claude/: settings.local.json
.github/workflows/: flatpak-validate.yml  flatpak.yml  release.yml
browser-extension/chrome/: README.md  manifest.json
browser-extension/chrome/pages/: error-content.js  error.html  error.js  options.css  options.js
browser-extension/chrome/popup/: popup.css  popup.js
browser-extension/chrome/scripts/: package.mjs
browser-extension/chrome/src/: action-click.js  action-feedback.js  background.js  blocked-hosts.js  bridge-client.js  context-menu.js  cookie-summary.js  cookies-domains.json  cookies.js  detect.js  hls-grouping.js  media-sniffer.js  sniffer-filters.js  sniffer-storage.js  sniffer-toggle.js
browser-extension/chrome/tests/: action-click.test.mjs  action-feedback.test.mjs  action-title.test.mjs  bridge-client.test.mjs  cookies.test.mjs  detect.test.mjs  error-content.test.mjs  manifest.test.mjs
browser-extension/firefox/: manifest.json
browser-extension/firefox/pages/: error.css  options.html
browser-extension/firefox/popup/: popup.html  popup.js
browser-extension/firefox/src/: action-click.js  action-title.js  cookies.js  detect.js  media-sniffer.js  sniffer-toggle.js
flatpak/: 0001-Fix-HAVE_VALGRIND-AM_CONDITIONAL.patch  0001-Make-introspection-configurable.patch  cargo-sources.json  node-sources.json  wtf.tonho.omniget.desktop  wtf.tonho.omniget.metainfo.xml  wtf.tonho.omniget.yml
scripts/: flatpak-preflight.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/omniget-cli/: Cargo.toml
src-tauri/omniget-cli/src/: cookies.rs  main.rs  output.rs  reporter.rs
src-tauri/omniget-cli/src/commands/: batch.rs  common.rs  download.rs  import_cookies.rs  info.rs  mod.rs
src-tauri/omniget-core/: Cargo.toml
src-tauri/omniget-core/src/: fs_paths.rs  lib.rs
src-tauri/omniget-core/src/core/: direct_downloader.rs  errors.rs  events.rs  hls_downloader.rs  mod.rs  paths.rs  registry.rs  ytdlp.rs
src-tauri/omniget-core/src/models/: download.rs  media.rs  mod.rs  settings.rs
src-tauri/omniget-plugin-courses/: README.md
src-tauri/omniget-plugin-sdk/src/: lib.rs
src-tauri/omniget-plugin-telegram/: Cargo.toml
src-tauri/src/: extension_storage.rs  external_url.rs  hotkey.rs  lib.rs  local_bridge.rs  main.rs  native_host.rs  plugin_host.rs  plugin_loader.rs  tray.rs
src-tauri/src/commands/: afya.rs  app_lifecycle.rs  auth.rs  auth_webview.rs  autostart.rs  bilibili_auth.rs  cademi_cmd.rs  cakto.rs  caktomembers.rs  convert.rs  courses.rs  dependencies.rs  diagnostics.rs  downloads.rs  dsa.rs  entregadigital.rs  estrategia_concursos.rs  greatcourses.rs  gumroad.rs  integration.rs  masterclass.rs  medway.rs  mod.rs  nutror.rs  p2p.rs  platform_auth.rs  plugins.rs  rocketseat.rs  search.rs  settings.rs  telegram.rs  thinkific.rs  udemy_auth.rs  udemy_courses.rs  udemy_downloads.rs
src-tauri/src/cookies/: commands.rs  parsers.rs  storage.rs
src-tauri/src/core/: auth.rs  clipboard.rs  cookie_parser.rs  dependencies.rs  direct_downloader.rs  download_engine.rs  events.rs  ffmpeg.rs  filename.rs  hls_downloader.rs  http_client.rs  hwaccel.rs  media_processor.rs  mod.rs  path_limits.rs  paths.rs  process.rs  queue.rs  queue_history.rs  redirect.rs  registry.rs  url_parser.rs  ytdlp.rs
src-tauri/src/models/: download.rs  media.rs  mod.rs  settings.rs
src-tauri/src/storage/: cache.rs  config.rs  database.rs  mod.rs
src/components/buttons/: Switcher.svelte
src/components/dialog/: ChangelogDialog.svelte  ConfirmCloseDialog.svelte  DialogContainer.svelte  LegalDialog.svelte  ShortcutsDialog.svelte
src/components/download/: DownloadLog.svelte  DownloadSpeedGraph.svelte
src/components/hints/: ContextHint.svelte
src/components/home/: HomeHero.svelte  HomeInspector.svelte  HomeUrlBar.svelte
src/components/hotmart/: CourseCard.svelte  ModuleList.svelte
src/components/icons/: PlatformIcon.svelte
src/components/mascot/: Mascot.svelte
src/components/misc/: Toggle.svelte
src/components/omnibox/: BatchDownload.svelte  DownloadModeSelector.svelte  FormatSelector.svelte  MediaPreview.svelte  OmniboxInput.svelte  QualityPicker.svelte  SearchResults.svelte
src/components/onboarding/: OnboardingWizard.svelte
src/components/p2p/: P2pSendDialog.svelte
src/components/services/: SupportedServices.svelte
src/components/settings/: DependencyRow.svelte  RichPresencePanel.svelte  SettingsAdvanced.svelte  SettingsAppearance.svelte  SettingsBrowserExtension.svelte  SettingsCookies.svelte  SettingsDownloads.svelte  SettingsDrillBack.svelte  SettingsDrillItem.svelte  SettingsDropdown.svelte  SettingsNetwork.svelte  SettingsPlugins.svelte  SettingsToggle.svelte
src/components/shell/: AppSidebar.svelte  AppToolbar.svelte  CommandPalette.svelte  NavIcon.svelte
src/components/toast/: Toast.svelte
src/lib/: build-info.test.ts  build-info.ts  course-platforms.ts  error-translate.test.ts  error-translate.ts  nav-config.test.ts  nav-config.ts  platform-display-names.ts  updater.ts
src/lib/home/: omnibox-controller.ts
src/lib/i18n/: el.json  en.json  fr.json  index.ts  it.json  ja.json  keys.ts  pt.json  zh-TW.json  zh.json
src/lib/stores/: changelog-store.svelte.ts  clipboard-monitor.ts  command-palette-store.svelte.ts  dependency-store.svelte.ts  download-listener.ts  download-store.svelte.ts  external-url-store.svelte.ts  media-preview-store.svelte.ts  omnibox-draft-store.svelte.ts  onboarding-store.svelte.ts  settings-store.svelte.ts  toast-store.svelte.ts  update-store.svelte.ts
src/lib/study-music-youtube-components/: YoutubeVideoCard.svelte
src/lib/style/: macos-shell.css  settings.css
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/about/: +layout.svelte  +page.svelte
(+63 files in other folders)
