[package]
name = "omniget"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "omniget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies", "stream"] }
futures = "0.3"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
chromiumoxide = { version = "0.7", features = ["tokio-runtime"] }
scraper = "0.21"
regex = "1"
m3u8-rs = "6"
aes = "0.8"
cbc = "0.1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
sanitize-filename = "0.6"
tempfile = "3"
rusty_ytdl = "0.7"
tokio-util = { version = "0.7", features = ["rt"] }
url = "2"
urlencoding = "2"
