[package]
name = "omniget"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "omniget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies", "stream"] }
futures = "0.3"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chromiumoxide = { version = "0.7", features = ["tokio-runtime"] }
scraper = "0.21"
regex = "1"
m3u8-rs = "6"
aes = "0.8"
cbc = "0.1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
sanitize-filename = "0.6"
tokio-util = { version = "0.7", features = ["rt"] }
url = "2"
urlencoding = "2"
rand = "0.10.0"
base64 = "0.22.1"
grammers-client = "0.8"
grammers-session = "0.8"
grammers-tl-types = "0.8"
grammers-mtsender = "0.8"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
os_info = "3"
sys-locale = "0.3"
filetime = "0.2.27"
zip = { version = "2", default-features = false, features = ["deflate"] }
sha2 = "0.10"
open = "5"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.0"
