[package]
name = "omniget-core"
version = "0.2.14"
edition = "2021"

[lib]
name = "omniget_core"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies", "stream", "http2", "gzip", "brotli", "deflate"] }
futures = "0.3"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
m3u8-rs = "6"
aes = "0.8"
cbc = "0.1"
anyhow = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
sanitize-filename = "0.6"
unicode-normalization = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
url = "2"
urlencoding = "2"
rand = "0.10.0"
base64 = "0.22.1"
sha2 = "0.10"
filetime = "0.2.27"
grammers-client = "0.8"
grammers-session = "0.8"
grammers-tl-types = "0.8"
grammers-mtsender = "0.8"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
scraper = "0.21"
